Fetch all history in build workflow
This commit updates the `push.yml` workflow so it pins to `actions/checkout@v1` which fetches all history from the git repository. An alternative would to keep relying on @master (or preferably, @v2) but using git fetch to undo the default behaviour where only the most recent commit is downloaded.

```
- uses: actions/checkout@v2
- run: git fetch --prune --unshallow
```

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -5,7 +5,7 @@ jobs:
     name: npm test
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v1
       - name: npm test
         uses: actions/setup-node@v1
       - run: npm it
